# CS_THESIS

./: .gitignore  Copy_of_KNN.ipynb  KNN.ipynb  KNN_DEMO.ipynb  KNN_Model_Analytics.ipynb  how-to-setup.txt  pyproject.toml  setup_linux.sh
WEBSITE/: .gitignore  README.md  app.py  config.py  features.py  feedback.txt  file.css  index.html  model.py  pyproject.toml  utils.py  youtube_converter.py
WEBSITE/assets/: README.md
WEBSITE/static/styles/: file.css  stylesheet.css
WEBSITE/templates/: index.html  main.js  pdf_page.html
WEBSITE/test/: utils.test.py
WEBSITE/utils/: convert.py  file_handling.py  youtube_converter.py
