[tool.poetry]
name = "cs-thesis"
version = "0.1.0"
description = ""
authors = ["Maou <33371589+maoouu@users.noreply.github.com>"]
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.23.4"
pandas = "^1.5.1"
scipy = "^1.9.3"
python-speech-features = "^0.6"
librosa = "^0.9.2"
ipython = "^8.5.0"
ipykernel = "^6.16.2"
matplotlib = "^3.6.1"
kaggle = "^1.5.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
