[tool.poetry]
name = "website"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
flask = "^2.2.2"
pandas = "^1.5.2"
scikit-learn = "^1.2.0"
pydub = "^0.25.1"
llvmlite = "^0.39.1"
numba = "^0.56.4"
librosa = "^0.9.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
